# ast-grep-wasm-napi-test

./: Cargo.toml  browser.js  build.rs  dup.c  dup.h  index.d.ts  index.js  package.json  sg.wasi-browser.js  sg.wasi.cjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.spec.mjs.md  index.spec.mjs.snap
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
