[package]
edition = "2021"
name = "test-sg"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21"

[build-dependencies]
cc = "1"
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
